@@ -456,6 +456,21 @@ namespace OpenBabel
     snprintf(buffer, BUFF_SIZE, "AUTHOR    GENERATED BY OPEN BABEL %s",BABEL_VERSION);
     ofs << buffer << endl;
 
+    // Write CRYST1 record, containing unit cell parameters, space group
+    // and Z value (supposed to be 1)
+    if (pmol->HasData(OBGenericDataType::UnitCell))
+      {
+	OBUnitCell *pUC = (OBUnitCell*)pmol->GetData(OBGenericDataType::UnitCell);
+	
+	snprintf(buffer, BUFF_SIZE,
+		 "CRYST1%9.3f%9.3f%9.3f%7.2f%7.2f%7.2f %-11s 1",
+		 pUC->GetA(), pUC->GetB(), pUC->GetC(),
+		 pUC->GetAlpha(), pUC->GetBeta(), pUC->GetGamma(),
+		 pUC->GetSpaceGroup() ?
+		 pUC->GetSpaceGroup()->GetHMName().c_str() : "P1");
+	ofs << buffer << endl;
+      }
+
     // before we write any records, we should check to see if any coord < -1000
     // which will cause errors in the formatting
 
